added more features
